# gamebankcore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config-examples/: fullnode.config.ini  testnet.config.ini
doc/: api-notes.md  building.md  example_config.ini  plugin.md  quickstart.md  seednodes.txt
libraries/: CMakeLists.txt
libraries/appbase/: application.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  contract_chain.cpp  contract_log.cpp  contract_lua.cpp  contract_lualib.cpp  database.cpp  fork_database.cpp  gamebank_evaluator.cpp  gamebank_objects.cpp  generic_custom_operation_interpreter.cpp  shared_authority.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/include/gamebank/chain/: account_object.hpp  bandwidth_notification.hpp  block_log.hpp  block_notification.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  compound.hpp  contract_log.hpp  crowdfunding_object.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  gamebank_evaluator.hpp  gamebank_object_types.hpp  gamebank_objects.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  nonfungible_fund_object.hpp  nonfungible_fund_on_sale_object.hpp  operation_notification.hpp  shared_authority.hpp  shared_db_merkle.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/gamebank/chain/contract/: contract.hpp  contract_chain.hpp  contract_interface.hpp  contract_lua.hpp  contract_lualib.hpp  contract_object.hpp  contract_user_object.hpp
libraries/chain/include/gamebank/chain/contract/lua/: lbaselib.c  ldo.c  lextend.c  lextend.h  linit.c  lmem.c  lobject.c  lobject.h  lparser.c  lstate.c  lua_cjson.c  lua_cjson.h  lvm.c
libraries/chain/include/gamebank/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  reward.cpp
libraries/chainbase/src/: chainbase.cpp
libraries/contract/: CMakeLists.txt  contract_lua.cpp  contract_lualib.cpp
libraries/contract/include/contract/: contract_interface.hpp  contract_lua.hpp  contract_lualib.hpp
libraries/contract/include/contract/lua/: lextend.h
libraries/contract/lua/: linit.c  lmem.c  loadlib.c  lstate.c  lvm.c
libraries/fc/: CMakeLists.txt  README-ecc.md  README.md  fc.natvis
libraries/fc/CMakeModules/: ArgumentParser.cmake  FindReadline.cmake  FindVLD.cmake  FindWt.cmake  ParseLibraryList.cmake  SetupTargetMacros.cmake  UseLibraryMacros.cmake  VersionMacros.cmake
libraries/fc/GitVersionGen/: GetGitRevisionDescription.cmake
libraries/fc/src/: asio.cpp  byteswap.hpp  exception.cpp  filesystem.cpp  git_revision.cpp.in  real128.cpp  shared_ptr.cpp  stacktrace.cpp  string.cpp  time.cpp  uint128.cpp  utf8.cpp  variant.cpp  variant_object.cpp
libraries/fc/tests/: CMakeLists.txt  all_tests.cpp  api.cpp  bip_lock.cpp  blinding_test.cpp  bloom_test.cpp  hmac_test.cpp  rate_limiting.cpp  real128_test.cpp  rpc.cpp  saturation_test.cpp  sha_test.cpp  sleep.cpp  udt_client.cpp  udt_server.cpp  udtc.cpp  udts.cpp  utf8_test.cpp
libraries/manifest/: CMakeLists.txt
libraries/net/: CMakeLists.txt  core_messages.cpp  node.cpp  peer_connection.cpp
libraries/plugins/account_by_key/: CMakeLists.txt  account_by_key_plugin.cpp
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/account_history_rocksdb/: CMakeLists.txt  account_history_rocksdb_plugin.cpp
libraries/plugins/block_data_export/: CMakeLists.txt  block_data_export_plugin.cpp
libraries/plugins/block_log_info/: CMakeLists.txt  block_log_info_plugin.cpp
libraries/plugins/chain/: CMakeLists.txt  chain_plugin.cpp
libraries/plugins/contract/: CMakeLists.txt  contract_lua.cpp  contract_lualib.cpp  contract_plugin.cpp  plugin.json
libraries/plugins/contract/include/gamebank/plugins/contract/: contract.hpp  contract_interface.hpp  contract_lua.hpp  contract_lualib.hpp  contract_object.hpp  contract_plugin.hpp  contract_user_object.hpp
libraries/plugins/contract/include/gamebank/plugins/contract/lua/: lstate.h  lvm.c
libraries/plugins/debug_node/: CMakeLists.txt  debug_node_plugin.cpp
libraries/plugins/follow/: CMakeLists.txt  follow_evaluators.cpp  follow_operations.cpp  follow_plugin.cpp  inc_performance.cpp
libraries/plugins/json_rpc/: CMakeLists.txt  json_rpc_plugin.cpp
libraries/plugins/market_history/: CMakeLists.txt  market_history_plugin.cpp
libraries/plugins/p2p/: CMakeLists.txt  p2p_plugin.cpp
libraries/plugins/reputation/: CMakeLists.txt  plugin.json  reputation_plugin.cpp
libraries/plugins/stats_export/: CMakeLists.txt  stats_export_plugin.cpp
libraries/plugins/statsd/: CMakeLists.txt  StatsdClient.hpp  UDPSender.hpp  utility.cpp  (+1 more)
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  gamebank_operations.cpp  get_config.cpp  operations.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/gamebank/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/gamebank/schema/schema_types/: fixed_string.hpp  flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  remote_node_api.cpp  wallet.cpp
programs/: CMakeLists.txt
programs/build_helpers/: configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/gamebankd/: CMakeLists.txt  main.cpp
programs/utils/: CMakeLists.txt  get_dev_key.cpp  newplugin.py  sign_digest.cpp  sign_transaction.cpp
(+404 files in other folders)
